# brew-monitor

./: .gitignore  BUILD.md  Cargo.toml  Cross.toml  build-and-run  build-pi  rustfmt.toml  shell.nix  to-do  update-cap
.cargo/: config
_build/: build-core
_build/deb/: build
_build/docker/armv7hf/: Dockerfile  build
_build/docker/host/: build
_build/docker/pi/: Dockerfile  build
bm/: Cargo.toml
bm-beerxml/: Cargo.toml
bm-beerxml/src/: lib.rs
bm-beerxml/test-data/: dpc-grainfather.xml
bm-bluetooth/: Cargo.toml
bm-bluetooth/src/: lib.rs
bm-db/src/: dht22.rs  tilt.rs
bm-grainfather/: Cargo.toml
bm-grainfather/src/: bluetooth.rs  lib.rs  proto.rs
bm-grainfather/src/bluetooth/: btleplug.rs
bm-grainfather/src/proto/: command.rs  mod.rs  notification.rs  recipe.rs
bm-grainfather/src/proto/notification/: notifications.rs
bm-tilt/src/: lib.rs
bm/debian/: bm.service  postinst
bm/src/: bluetooth_discovery.rs  data.rs  grainfather_client.rs  main.rs  server.rs
bm/src/devices/: gf_manager.rs
bm/src/web/: assets.rs  gf.rs  tilt.rs
bm/src/web/gf/: ws.rs
bm/www/: index.html
bm/www_src/: app.tsx  index.css  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.config.js
bm/www_src/app/gf/: client.ts  heat.tsx  pump.tsx  timer-progress.tsx  types.ts
bm/www_src/app/gf/recipe/: active.tsx  countdown.tsx
bm/www_src/app/gf/recipe/active/: boil-addition-modal.tsx  heat-sparge-water-modal.tsx
bm/www_src/app/tilt/: tilt.css
bm/www_src/gf/: heat-progress.tsx  heat.tsx  index.tsx  recipe.tsx  timer-progress.tsx  types.ts
bm/www_src/gf/recipe/: active.tsx  inactive.tsx
bm/www_src/gf/recipe/active/: boil-addition-modal.tsx
brew-monitor/: Cargo.toml
brew-monitor/debian/: brew-monitor.service
brew-monitor/src/: bluetooth_discovery.rs  devices.rs  main.rs  web.rs
brew-monitor/src/devices/: gf_manager.rs
brew-monitor/src/web/: assets.rs  dht22.rs  tilt.rs
brew-monitor/src/web/gf/: mod.rs  ws.rs
brew-monitor/src/web/recipes/: mod.rs
brew-monitor/www_src/: index.css  index.html  package-lock.json  package.json  stats.json  tsconfig.json  webpack.config.js
brew-monitor/www_src/app/: app.css  index.tsx
brew-monitor/www_src/app/dht22/: index.css  index.tsx
brew-monitor/www_src/app/gf/: client.ts  heat.tsx  index.tsx  recipe.tsx  types.ts
brew-monitor/www_src/app/gf/recipe/: active.tsx  inactive.tsx
brew-monitor/www_src/app/gf/recipe/active/: boil-addition-modal.tsx  heat-sparge-water-modal.tsx  interaction-modal.tsx
brew-monitor/www_src/app/tilt/: index.tsx
build-support/: build-core
build-support/docker/aarch64/: build
build-support/docker/armv7hf/: build
build-support/docker/host/: Dockerfile
dht22-monitor/: Cargo.toml
dht22-monitor/src/: main.rs
gf/: Cargo.toml
gf/src/: main.rs
grainfather-control/: Cargo.toml
grainfather-control/src/: lib.rs  main.rs
grainfather-proto/: Cargo.toml
lib/bm-beerxml/src/: lib.rs
lib/bm-beerxml/test-data/: dpc-brewfather.xml
lib/bm-bluetooth/src/: lib.rs
lib/bm-db/: Cargo.toml
lib/bm-db/scripts/: v1.sql  v2.sql  v3.sql
lib/bm-db/src/: dht22.rs  lib.rs  recipe.rs  tilt.rs
lib/bm-grainfather/src/: bluetooth.rs  calc.rs  proto.rs
lib/bm-grainfather/src/bluetooth/: btleplug.rs
lib/bm-grainfather/src/proto/: command.rs  notification.rs  recipe.rs
lib/bm-grainfather/src/proto/notification/: notifications.rs
lib/bm-recipe/: Cargo.toml
lib/bm-recipe/src/: lib.rs
lib/bm-tilt/: Cargo.toml
play-warp/: Cargo.toml
play-warp/src/: main.rs
test-data/: boil_100  boil_60  boil_65  cancel_sparge_heating  disconnect_manual_mode  heat_on  pump_off  pump_on  recipe.json  send  send_recipe  set  skip_to_step_2.json
test_data/: cancel_sparge_heating  cancel_timer  confirm_boil_addition.json  disconnect_automatic_mode  disconnect_cancel_session  heat_off  recipe.json  reset  reset_recipe_interrupted  skip_to_step_2  skip_to_step_5.json
