[package]
name = "bm-grainfather"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bm-bluetooth = { path = "../bm-bluetooth" }
uuid = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
