[package]
name = "bm-grainfather"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

[features]
default = ["btleplug"]

[dependencies]
bm-bluetooth = { path = "../bm-bluetooth" }
uuid = "0.8.1"
serde = { version = "1.0", features = ["derive"] }

# Optional dependencies
btleplug = { optional = true, version = "0.5.4" }
