[package]
name = "bm"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4", features = ["attributes"] }
uuid = "0.8.1"
chrono = "0.4"
btleplug = "0.5.4"

bm-bluetooth = { path = "../bm-bluetooth" }
bm-tilt = { path = "../bm-tilt" }
bm-grainfather = { path = "../bm-grainfather" }

[dependencies.bluez]
git = "https://github.com/laptou/bluez-rs"
branch = "master"
