[package]
name = "bm"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4", features = ["attributes"] }
uuid = "0.8.1"
chrono = "0.4"
btleplug = "0.5.4"

warp = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

warp-embed = "0.1.2"
rust-embed = "5.6.0"

bm-bluetooth = { path = "../bm-bluetooth" }
bm-tilt = { path = "../bm-tilt" }
bm-grainfather = { path = "../bm-grainfather" }

[dependencies.bluez]
git = "https://github.com/laptou/bluez-rs"
branch = "master"
