[package]
name = "brew-monitor"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"
license = "MIT"
description = "Home-brewery Monitoring and Control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"

async-std = { version = "1.4", features = ["attributes"] }
uuid = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
btleplug = "0.5.4"
futures = "0.3"

warp = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "0.2", features = ["full", "time"] }
bytes = "0.5.6"

warp-embed = "0.1.2"
rust-embed = "5.6.0"

dht22_pi = "0.3.0"
rppal = "0.11.3"

# For beerxml
serde-xml-rs = "0.4.0"

bm-db = { path = "../lib/bm-db" }
bm-bluetooth = { path = "../lib/bm-bluetooth" }
bm-tilt = { path = "../lib/bm-tilt" }
bm-grainfather = { path = "../lib/bm-grainfather" }
bm-recipe = { path = "../lib/bm-recipe" }
bm-beerxml = { path = "../lib/bm-beerxml" }

[dependencies.bluez]
git = "https://github.com/laptou/bluez-rs"
branch = "master"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
assets = [
    ["target/release/brew-monitor", "/usr/local/bin/brew-monitor", "755"],
]
depends = "adduser"
