[package]
name = "grainfather-control"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "= 0.6.2"

[dependencies.bluez]
git = "https://github.com/laptou/bluez-rs"
branch = "master"
