[package]
name = "play-warp"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
