[package]
name = "bm-db"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
bm-tilt = { path = "../bm-tilt" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.24.2"
features = ["chrono"]
