[package]
name = "bm-db"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

bm-tilt = { path = "../bm-tilt" }
bm-recipe = { path = "../bm-recipe" }
serde_json = "1.0.60"

[dependencies.rusqlite]
version = "0.24.2"
features = ["chrono"]
